--- a/examples/initHW.html
+++ b/examples/initHW.html
@@ -4,10 +4,38 @@
   <script src="https://calysto.github.io/javascripts/blockly/blocks_compressed.js"></script>
   <script src="https://calysto.github.io/javascripts/blockly/python_compressed.js"></script>
   <script src="https://calysto.github.io/javascripts/blockly/msg/js/en.js"></script> -->
+
   <script src="http://localhost:8000/javascripts/blockly/blockly_compressed.js"></script>
-  <script src="http://localhost:8000/javascripts/blockly/blocks_compressed.js"></script>
-  <script src="http://localhost:8000/javascripts/blockly/python_compressed.js"></script>
+
+  <!-- <script src="http://localhost:8000/javascripts/blockly/blocks_compressed.js"></script> -->
+  <script src="http://localhost:8000/javascripts/blockly/blocks/logic.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/blocks/loops.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/blocks/math.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/blocks/text.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/blocks/lists.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/blocks/colour.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/blocks/variables.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/blocks/procedures.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/blocks/overlay.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/blocks/arduino.js"></script>
+
+
+  <!-- <script src="http://localhost:8000/javascripts/blockly/python_compressed.js"></script> -->
+  <script src="http://localhost:8000/javascripts/blockly/generators/python.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/generators/python/logic.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/generators/python/loops.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/generators/python/math.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/generators/python/text.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/generators/python/lists.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/generators/python/colour.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/generators/python/variables.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/generators/python/procedures.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/generators/python/overlay.js"></script>
+  <script src="http://localhost:8000/javascripts/blockly/generators/python/arduino.js"></script>
+
+  <!-- <script src="http://localhost:8000/javascripts/blockly/msg/js/en.js"></script> -->
   <script src="http://localhost:8000/javascripts/blockly/msg/js/en.js"></script>
+
   <style>
     html, body {
       height: 100%;
@@ -412,9 +440,9 @@
 <tr>
 <td>
 <div style="text-align: center">
-    <button onclick="window.parent.document.jigsaw_generate('workspace11.xml', 'Python')">Run</button>
-    <button onclick="window.parent.document.jigsaw_generate('workspace11.xml', 'Python', 1)">Generate Python Code</button>
-    <button onclick="window.parent.document.jigsaw_clear_output('workspace11.xml')">Clear Cell Output</button>
+    <button onclick="window.parent.document.jigsaw_generate('initHW.xml', 'Python')">Run</button>
+    <button onclick="window.parent.document.jigsaw_generate('initHW.xml', 'Python', 1)">Generate Python Code</button>
+    <button onclick="window.parent.document.jigsaw_clear_output('initHW.xml')">Clear Cell Output</button>
 </div>
 </td>
 </tr>
@@ -432,7 +460,7 @@
         });
 
       var xml_init = document.getElementById('workspace');
-      window.parent.document.jigsaw_register_workspace("workspace11.xml", workspace, xml_init);
+      window.parent.document.jigsaw_register_workspace("initHW.xml", workspace, xml_init);
   </script>
 </body>
 </html>
